mealie/Service-mealie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: mealie
