mealie/Ingress-mealie.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: azure-acme-issuer
  name: mealie
  namespace: mealie
spec:
  ingressClassName: haproxy
  rules:
    - host: mealie.anderwerse.de
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mealie.anderwerse.de
      secretName: mealie-tls
